<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.SignupActivity"
    android:background="@drawable/bg">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha = "0.7"
        android:background="@color/primaryDark"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_28sdp">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_thin"
                android:text="@string/app_name"
                android:textColor="@color/white_smoke"
                android:textStyle="bold"
                android:textSize="@dimen/_32sdp"/>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            app:cardCornerRadius="@dimen/_28sdp"
            app:cardUseCompatPadding="true">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_18sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome"
                        android:textColor="@color/primaryDark"
                        android:textSize="@dimen/_20sdp"
                        android:fontFamily="@font/poppins_light"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:text="@string/welcomeNote"/>

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_30sdp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/registerFullname"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/Fullname"
                        android:textColorHint="@color/gray"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidthFocused="@dimen/_2sdp"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                        app:startIconDrawable="@drawable/person_ic"
                        app:startIconTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/registerFullname_box"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_light"
                            android:inputType="textPersonName"
                            android:textColor="@color/gray"
                            android:textCursorDrawable="@null"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signupemail"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/email"
                        android:textColorHint="@color/dark_gray"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidthFocused="@dimen/_2sdp"
                        app:endIconMode="clear_text"
                        app:endIconTint="@color/black"
                        app:startIconDrawable="@drawable/ic_email"
                        app:startIconTint="@color/black">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signupemail_box"
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:fontFamily="@font/poppins_light"
                            android:inputType="textEmailAddress"
                            android:textColor="@color/dark_gray" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signupPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/password"
                        android:textColorHint="@color/dark_gray"
                        app:boxStrokeColor="@color/black"
                        app:startIconTint="@color/black"
                        app:boxStrokeWidthFocused="@dimen/_2sdp"
                        app:endIconTint="@color/black"
                        app:endIconMode="password_toggle"
                        app:hintTextColor="@color/dark_gray"
                        app:startIconDrawable="@drawable/ic_password">


                        <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupPassword_box"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/poppins_light"
                        android:inputType="textPassword"
                        android:textColor="@color/dark_gray"/>


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signupConfirmPassword"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:hint="@string/Confirmpassword"
                        android:textColorHint="@color/dark_gray"
                        app:boxStrokeColor="@color/black"
                        app:startIconTint="@color/black"
                        app:boxStrokeWidthFocused="@dimen/_2sdp"
                        app:hintTextColor="@color/dark_gray"
                        app:endIconTint="@color/black"
                        app:endIconMode="password_toggle"
                        app:startIconDrawable="@drawable/ic_password">



                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signupConfirmPassword_box"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="textPassword"
                        android:fontFamily="@font/poppins_light"
                        android:textColor="@color/dark_gray"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/register_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register_button"
                        android:backgroundTint="@color/primaryDark"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:textColor="@color/white_smoke"
                        android:textSize="@dimen/_12sdp"
                        android:fontFamily="@font/poppins_light"
                        app:cornerRadius="@dimen/_10sdp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_marginTop="24dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Already_have_account"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Click_here"
                            android:onClick="Login"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:ignore="OnClick" />

                    </LinearLayout>

                </LinearLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</RelativeLayout>