<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/_14sdp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_light"
        android:text="@string/payment_option"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/white_smoke"
        app:cardElevation="@dimen/_6sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:padding="@dimen/_8sdp"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/bank_transfer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/bank_transfer"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/white_smoke"
        app:cardElevation="@dimen/_6sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:padding="@dimen/_8sdp"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/online_payment"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/online_payment"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/white_smoke"
        app:cardElevation="@dimen/_6sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:padding="@dimen/_8sdp"
                android:layout_margin="@dimen/_5sdp"
                android:onClick="goToCardPayment"
                android:src="@drawable/card_paymrnt"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:text="@string/card_payment"
                android:onClick="goToCardPayment"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardBackgroundColor="@color/white_smoke"
        app:cardElevation="@dimen/_6sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardUseCompatPadding="true"
        android:layout_height="wrap_content">

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/cshOnDeliveryImageView"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:padding="@dimen/_8sdp"
                android:onClick="goToFinalOrderPage"
                android:layout_margin="@dimen/_5sdp"
                android:src="@drawable/cod"/>

            <TextView
                android:id="@+id/cshOnDeliveryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:onClick="goToFinalOrderPage"
                android:text="@string/cash_on_delivery"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>